--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/tfg
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
